--- a/.syncignore
+++ b/.syncignore
@@ -1,9 +1,1 @@
-**/node_modules/**
-{**/*.js.map,**/node_modules/**,src/**}
-package.json
-postcss.config.js
-webpack.config.js
-.gitignore
-.svn/**
-.git/**
-.vscode/**
+{**/*.js.map,**/node_modules/**,src/**,package.json,postcss.config.js,webpack.config.js,.gitignore,.svn/**,.git/**,.vscode/**}
